--- a/package.json
+++ b/package.json
@@ -14,9 +14,17 @@
     "@types/react-dom": "18.2.4",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "js-quantities": "^1.7.6",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.3"
+    "recharts": "^2.6.2",
+    "styled-components": "^5.3.11",
+    "typescript": "5.1.3",
+    "usehooks-ts": "^2.9.1"
+  },
+  "devDependencies": {
+    "@types/js-quantities": "^1.6.3",
+    "@types/styled-components": "^5.1.26"
   }
 }
